package ru.productallergen.authservice.dto.auth;

public record LogoutRequest(String refreshToken) {}
