package ru.productallergen.authservice.dto.auth;

public record RefreshRequest(String refreshToken) {}
