@startuml auth-service-class
' Классический UML + отступы против наложений
skinparam shadowing false
skinparam roundcorner 0
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam handwritten false

skinparam nodesep 60
skinparam ranksep 50
skinparam padding 12
skinparam classAttributeIconSize 0

skinparam class {
  BackgroundColor #FEFECE
  BorderColor black
  ArrowColor black
}
skinparam interface {
  BackgroundColor #FEFECE
  BorderColor black
}
skinparam package {
  BackgroundColor white
  BorderColor black
  FontStyle bold
}

title Диаграмма классов — auth-service

' --- Слой controller ---
package "controller" {
  class AuthController {
    - authService : AuthService
    --
    + login(LoginRequest) : AuthResponse
    + register(RegisterRequest) : AuthResponse
    + logout(LogoutRequest) : String
    + refresh(RefreshRequest) : AuthResponse
  }
}

' --- Слой service ---
package "service" {
  class AuthService {
    - userRepository : UserRepository
    - passwordEncoder : PasswordEncoder
    - authenticationManager : AuthenticationManager
    - jwtService : JwtService
    - refreshTokenService : RefreshTokenService
    --
    + register(RegisterRequest) : AuthResponse
    + login(LoginRequest) : AuthResponse
    + refresh(String) : AuthResponse
    + logout(String) : void
  }
  class RefreshTokenService {
    - redisTemplate : RedisTemplate
    --
    + saveRefreshToken(token, email) : void
    + revokeOldTokensByEmail(email) : void
    + isValid(token) : boolean
    + getEmail(token) : String
    + revokeToken(token) : void
  }
}

' --- Слой security ---
package "security" {
  class JwtService {
    - secret : String
    --
    + generateAccessToken(email, id) : String
    + generateRefreshToken(email) : String
    + validateToken(token, type) : boolean
    + extractEmail(token) : String
  }
  class SecurityConfig {
    + passwordEncoder() : PasswordEncoder
    + authenticationManager() : AuthenticationManager
    + securityFilterChain() : SecurityFilterChain
  }
}

' --- Слой persistence ---
package "persistence" {
  interface UserRepository {
    + findByEmail(email) : Optional<User>
    + existsByEmail(email) : boolean
  }
  class User {
    - id : UUID
    - email : String
    - password : String
    - isActive : boolean
    - createdAt : LocalDateTime
    - updatedAt : LocalDateTime
  }
}

' --- DTO ---
package "dto" {
  class LoginRequest <<DTO>>
  class RegisterRequest <<DTO>>
  class LogoutRequest <<DTO>>
  class RefreshRequest <<DTO>>
  class AuthResponse <<DTO>> {
    + accessToken : String
    + refreshToken : String
  }
  class ApiErrorResponse <<DTO>>
}

' --- Исключения ---
package "exception" {
  class GlobalExceptionHandler
  class InvalidCredentialsException
  class UserAlreadyExistsException
  class InvalidRefreshTokenException
  class UserNotFoundException
}

package "config" {
  class OpenApiConfig
}

' Связи (без hidden — стабильный рендер)
AuthController --> AuthService
AuthService --> UserRepository
AuthService --> JwtService
AuthService --> RefreshTokenService
UserRepository ..> User

AuthController ..> LoginRequest
AuthController ..> RegisterRequest
AuthController ..> LogoutRequest
AuthController ..> RefreshRequest
AuthController ..> AuthResponse
AuthService ..> AuthResponse

GlobalExceptionHandler ..> ApiErrorResponse

@enduml
